gravitee-apim-console-webui/src/management/observability/env-logs/components/env-logs-details/env-logs-details.component.scss
/*
 * Copyright (C) 2015 The Gravitee team (http://gravitee.io)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
@use '@gravitee/ui-particles-angular' as gio;
@use '@angular/material' as mat;
@use '../../../../../scss/gio-layout' as gio-layout;

:host {
  display: flex;
  flex-direction: column;
  gap: 16px;
  @include gio-layout.gio-full-width-content-container;

  .back-button {
    align-self: flex-start;
    margin-bottom: 24px;
  }
}

.logs-details {
  &__loading {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 12px;
    padding: 48px 0;
    color: mat.m2-get-color-from-palette(gio.$mat-dove-palette, 'darker');
    font-style: italic;
  }

  &__container {
    display: flex;
    flex-direction: column;
    padding: 24px 32px 0 32px;
  }

  &__form {
    display: flex;
    flex-direction: column;
  }

  &__content {
    display: flex;
    flex-direction: column;
  }
}

.card {
  margin-bottom: 16px;

  .mat-h5 {
    margin-bottom: 16px;
  }

  &__container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-bottom: 16px;
    gap: 16px;
  }

  &__section {
    display: flex;
    flex-direction: column;
    flex: 1;
    min-width: 0;
    border: 1px solid mat.m2-get-color-from-palette(gio.$mat-dove-palette, 'darker20');
    border-radius: 8px;
    padding: 16px;

    &__kv {
      --log-item-label-width: 10rem;
      display: flex;
      flex-direction: column;
      gap: 6px;
      margin-top: 16px;

      [class*='gio-method-badge-'],
      [class*='gio-badge-'] {
        margin-left: -1px;
      }

      &--flush {
        margin-top: 0;
      }
    }

    &__label {
      margin-top: 1rem;
    }
  }
}

.more-details {
  border: 1px solid mat.m2-get-color-from-palette(gio.$mat-dove-palette, 'darker20');
  border-radius: 8px;
}

.payload {
  margin-top: 16px;

  &__empty {
    color: mat.m2-get-color-from-palette(gio.$mat-dove-palette, 'darker');
    font-style: italic;
  }
}

.editor {
  margin-top: 8px;
  border: 1px solid mat.m2-get-color-from-palette(gio.$mat-dove-palette, 'darker20');
  border-radius: 4px;
  height: 180px;
  overflow: hidden;
}

